修改顾客和管理员的数据库以及处理细节问题 建立了菜品的基本信息

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,10 @@ server:
   port: 8080
   servlet:
     context-path: /starryfood
+
+# pagehelper
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
