--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.practice</groupId>
     <artifactId>starryfood</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>starryfood</name>
     <description>Demo project for Spring Boot</description>
 
